language/move-lang/tests/move_check/parser/attribute_num_sign_no_bracket.exp
error: 

   ┌── tests/move_check/parser/attribute_num_sign_no_bracket.move:4:5 ───
   │
 4 │     fun foo() {}
   │     ^^^ Unexpected 'fun'
   ·
 4 │     fun foo() {}
   │     --- Expected '['
   │

